first version complete

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="keywords" content="Vue高仿QQ音乐，搭配详细说明">
     <title>QQ音乐</title>
   </head>
   <body>
