--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="keywords" content="Vue高仿QQ音乐，搭配详细说明">
+    <meta name="description" content="Vue全家桶+Mint-Ui打造高仿QQMusic，搭配详细说明">
+    <meta name="author" content="https://github.com/Panda-Hope/vue-qqmusic">
     <title>QQ音乐</title>
   </head>
   <body>
